Cabal-Version:            3.0
Name:                     token-distro
Version:                  1.0.0
Author:                   Ekival
Build-Type:               Simple
License:                  Apache-2.0
License-file:             LICENSE

Common project-config
  default-language:       Haskell2010
  default-extensions:     NoImplicitPrelude
                          OverloadedStrings
                          ExplicitForAll
                          ScopedTypeVariables
                          DeriveGeneric
                          StandaloneDeriving
                          DeriveLift
                          GeneralizedNewtypeDeriving
                          DeriveFunctor
                          DeriveFoldable
                          DeriveTraversable
                          LambdaCase
                          MultiParamTypeClasses
                          TypeOperators
                          FlexibleInstances
                          NamedFieldPuns
                          TypeFamilies
                          FlexibleContexts
                          DeriveAnyClass
                          DerivingStrategies
                          DerivingVia
                          DataKinds
                          PatternGuards
  ghc-options:            -Wall
                          -Wcompat
                          -Wincomplete-record-updates
                          -Wnoncanonical-monad-instances
                          -Wredundant-constraints
                          -Wincomplete-uni-patterns
                          -Wunused-packages
                          -Widentities
                          -rtsopts
                          -fno-ignore-interface-pragmas
                          -fno-omit-interface-pragmas
                          -fobject-code
                          -fno-specialise
                          -fno-spec-constr
                          -fno-strictness

Library
  import:                 project-config
  hs-source-dirs:         src
  exposed-modules:
                          Distro.Compiler
                          Distro.Contract
                          Distro.DataTypes
                          Distro.ToJSON

                          Regulator.Compiler
                          Regulator.Contract
                          Regulator.DataTypes
                          Regulator.ToJSON
  build-depends:
                          base
                        , aeson
                        , bytestring
                        , cardano-api
                        , directory
                        , filepath
                        , plutus-core
                        -- , plutus-ledger
                        , plutus-ledger-api
                        , plutus-tx
                        , plutus-tx-plugin
                        , serialise
                        , split
                        , plutus-script-utils
                        , plutonomy


executable             TimeAnalysis
  main-is:             TimeAnalysis.hs
  hs-source-dirs:      utils/scripts
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , plutus-ledger
  default-language:    Haskell2010
  ghc-options:        -Wall